# adblocker

./: Cargo.toml  justfile  rustfmt.toml
src/: blocker.rs  blocklists.rs  cache.rs  config.rs  context.rs  main.rs  middleware.rs  pipeline.rs  response_cache.rs  server.rs  state.rs
src/app/: app.rs  mod.rs  pipeline.rs
src/application/: app.rs  mod.rs  pipeline.rs
src/firewall/: external_dns.rs  mod.rs
src/middlewares/: blocker.rs  mod.rs
src/windows/: mod.rs  pwstr_buf.rs  transaction.rs
